# numbat-component

./: .gitignore  Cargo.toml
src/: bindings.rs  lib.rs
wit/: world.wit
